--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
   "name": "markieui-utility",
   "version": "1.0.0",
-  "description": "SCSS utilities created by Markie Arnold",
+  "description": "UI utilities",
   "main": "sass/utility.scss",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Markie Arnold",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/markiearnold/markieui-utilities.git"
+  },
+  "keywords": [
+    "ui",
+    "utilities"
+  ],
+  "author": "Markie Arnold <markiearnold@gmail.com> (https://github.com/markiearnold)",
   "license": "ISC",
-  "devDependencies": {
-    "del": "^6.0.0",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^8.0.0",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-rename": "^2.0.0",
-    "gulp-sass": "^5.0.0",
-    "node-sass": "^6.0.1"
-  }
+  "bugs": {
+    "url": "https://github.com/markiearnold/markieui-utilities/issues"
+  },
+  "homepage": "https://github.com/markiearnold/markieui-utilities#readme"
 }
